--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/TCatFileImportModal.razor
@@ -3,6 +3,7 @@
 <link href="/css/tenant-payout.css" rel="stylesheet" />
 @inherits PikachuComponentBase
 @inject ITCatCodTradeInfoAppService TCatCodTradeInfoAppService
+@inject IJSRuntime JSRuntime
 
 <Modal @bind-Visible="@Visible">
     <ModalContent Size="_recordsVisible? ModalSize.ExtraLarge: ModalSize.Large">
@@ -16,16 +17,16 @@
         <ModalBody>
             @if (!_recordsVisible)
             {
-                <Div Class="container-less-filepicker">
-                    <Field>
-                        <FilePicker @ref="_pickerRef"
-                                    Changed="@OnFileUploadAsync"
-                                    ShowMode="FilePickerShowMode.List"
-                                    Accept=".xlsx, .csv">
-                        </FilePicker>
-                        <FieldHelp>@L["OnlyXlsxCsvAccepted"]</FieldHelp>
-                    </Field>
-                </Div>
+                <div class="upload-section" id="uploadSection">
+                    <div class="upload-area" id="uploadArea" onclick="document.getElementById('fileInput').click()">
+                        <div class="upload-icon">📄</div>
+                        <div class="upload-text">Drop your file here or click to browse</div>
+                        <div class="upload-subtext">Drag and drop your file anywhere in this area</div>
+                        <div class="file-types">Supported: CSV, Excel (Max 10MB)</div>
+                        <InputFile type="file" id="fileInput" class="file-input" accept=".csv,.xlsx,.xls"
+                               OnChange="OnFileChange" />
+                    </div>
+                </div>
             }
             else
             {
