--- a/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantFrontendInformation.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantManagement/TenantSettings/TenantFrontendInformation.razor
@@ -49,6 +49,7 @@
                             <Field>
                                 <FilePicker Changed="@((e) => OnFileUploadAsync(e, "logo"))"
                                             ShowMode="FilePickerShowMode.List"
+                                            FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
                                             Accept="@(string.Join(", ", Constant.ValidImageExtensions))">
                                     <FileTemplate></FileTemplate>
                                     <ButtonsTemplate></ButtonsTemplate>
@@ -74,6 +75,7 @@
                             <Field>
                                 <FilePicker Changed="@((e) => OnFileUploadAsync(e, "banner"))"
                                             ShowMode="FilePickerShowMode.List"
+                                            FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
                                             Accept="@(string.Join(", ", Constant.ValidImageExtensions))">
                                     <FileTemplate></FileTemplate>
                                     <ButtonsTemplate></ButtonsTemplate>
@@ -108,6 +110,7 @@
                             <Field>
                                 <FilePicker Changed="@((e) => OnFileUploadAsync(e, "favicon"))"
                                             ShowMode="FilePickerShowMode.List"
+                                            FilePickerLocalizer="(key, args) => LocalizeFilePicker(key, args)"
                                             Accept="@(string.Join(", ", Constant.ValidFaviconExtensions))"
                                             drop-text="ICO">
                                     <FileTemplate></FileTemplate>
